@@ -1,0 +1,11 @@
+[[!comment format=mdwn
+ username="joey"
+ subject="""comment 1"""
+ date="2015-02-11T17:15:04Z"
+ content="""
+It's completely legal for git commits to have empty commit messages. Why
+would rebase care? Seems like a bug in rebase.
+
+Note that only the git-annex assistant currently uses empty commit
+messages.
+"""]]
