@@ -25,6 +25,7 @@ git-annex (5.20150206) UNRELEASED; urgency=medium
   * metadata: When setting metadata, do not recurse into directories by
     default, since that can be surprising behavior and difficult to recover
     from. The old behavior is available by using --force.
+  * sync, assistant: Include repository name in head branch commit message.
 
  -- Joey Hess <id@joeyh.name>  Fri, 06 Feb 2015 13:57:08 -0400
 
